--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Github Favorites</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <script src="./js/main.js" type="module" defer></script>
 </head>
 
 <body>
@@ -32,32 +33,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/maykbrito.png" alt="imagem de maykbrito">
-                        <a href="https://github.com/maykbrito" target="_blank">
-                            <p>Mayk Brito</p>
-                            <span>maykbrito</span>
-                        </a>
-                    </td>
-                    <td class="repositories">76</td>
-                    <td class="followers">9589</td>
-                    <td><button class="remove">&times;</button></td>
-                </tr>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/diego3g.png" alt="imagem de diego3g">
-                        <a href="https://github.com/diego3g" target="_blank">
-                            <p>Diego Fernandes</p>
-                            <span>diego3g</span>
-                        </a>
-                    </td>
-                    <td class="repositories">48</td>
-                    <td class="followers">22503</td>
-                    <td><button class="remove">&times;</button></td>
-                </tr>
-
             </tbody>
+            <tfoot><tr><td><button class="clearStore">Limpar</button></td></tr></tfoot>
         </table>
     </div>
 </body>
